{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 63,
  "lineage": "a29818d9-3a70-1086-b497-af7fa946fd9f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.88.128.161",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-28T01:58:19.989-07:00",
            "id": "projects/mypersonaluse-396811/regions/europe-north1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mypersonaluse-396811",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/regions/europe-north1/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.88.145.133",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-28T01:58:20.019-07:00",
            "id": "projects/mypersonaluse-396811/regions/europe-north1/addresses/ipv4-address2",
            "name": "ipv4-address2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mypersonaluse-396811",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/regions/europe-north1/addresses/ipv4-address2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.228.105.124",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-28T01:58:20.048-07:00",
            "id": "projects/mypersonaluse-396811/regions/europe-north1/addresses/ipv4-address3",
            "name": "ipv4-address3",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mypersonaluse-396811",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/regions/europe-north1/addresses/ipv4-address3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T01:58:41.830-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-http",
            "log_config": [],
            "name": "kube-cluster-test-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
            "priority": 1000,
            "project": "mypersonaluse-396811",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T01:58:41.827-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-https",
            "log_config": [],
            "name": "kube-cluster-test-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
            "priority": 1000,
            "project": "mypersonaluse-396811",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-kuber",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T01:58:41.941-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-kuber",
            "log_config": [],
            "name": "kube-cluster-test-fw-allow-kuber",
            "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
            "priority": 1000,
            "project": "mypersonaluse-396811",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-kuber",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T01:58:41.841-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-rdp",
            "log_config": [],
            "name": "kube-cluster-test-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
            "priority": 1000,
            "project": "mypersonaluse-396811",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T01:58:41.821-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-ssh",
            "log_config": [],
            "name": "kube-cluster-test-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
            "priority": 1000,
            "project": "mypersonaluse-396811",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/firewalls/kube-cluster-test-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230817",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/zones/europe-north1-a/disks/master-webfusion-kube-cluster-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "kube-cluster-vm3f0bb869.garystimber.site",
            "id": "projects/mypersonaluse-396811/zones/europe-north1-a/instances/master-webfusion-kube-cluster-test-vm",
            "instance_id": "302743653590359225",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "KE5DxIAG1gk=",
            "metadata_startup_script": "sudo swapoff -a;\r\nsudo apt install docker.io -y;\r\ncurl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add;\r\necho \"deb https://apt.kubernetes.io/ kubernetes-xenial main\" | sudo tee /etc/apt/sources.list.d/kubernetes.list;\r\nsudo apt update;\r\nsudo apt install kubeadm kubelet kubectl kubernetes-cni -y;\r\n",
            "name": "master-webfusion-kube-cluster-test-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.128.161",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
                "network_ip": "10.10.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/regions/europe-north1/subnetworks/webfusion-kube-cluster-test-subnet",
                "subnetwork_project": "mypersonaluse-396811"
              }
            ],
            "project": "mypersonaluse-396811",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/zones/europe-north1-a/instances/master-webfusion-kube-cluster-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "europe-north1-a"
          },
          "dependencies": [
            "data.template_file.linux-metadata",
            "google_compute_address.static",
            "google_compute_network.vpc",
            "google_compute_subnetwork.network_subnet",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230817",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/zones/europe-north1-a/disks/woker-1-webfusion-kube-cluster-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "kube-cluster-vm3f0bb869.garystimber.site",
            "id": "projects/mypersonaluse-396811/zones/europe-north1-a/instances/woker-1-webfusion-kube-cluster-test-vm",
            "instance_id": "7923134819272350904",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "KE5DxIAG1gk=",
            "metadata_startup_script": "sudo swapoff -a;\r\nsudo apt install docker.io -y;\r\ncurl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add;\r\necho \"deb https://apt.kubernetes.io/ kubernetes-xenial main\" | sudo tee /etc/apt/sources.list.d/kubernetes.list;\r\nsudo apt update;\r\nsudo apt install kubeadm kubelet kubectl kubernetes-cni -y;\r\n",
            "name": "woker-1-webfusion-kube-cluster-test-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.145.133",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
                "network_ip": "10.10.10.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/regions/europe-north1/subnetworks/webfusion-kube-cluster-test-subnet",
                "subnetwork_project": "mypersonaluse-396811"
              }
            ],
            "project": "mypersonaluse-396811",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/zones/europe-north1-a/instances/woker-1-webfusion-kube-cluster-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "europe-north1-a"
          },
          "dependencies": [
            "data.template_file.linux-metadata",
            "google_compute_address.static2",
            "google_compute_network.vpc",
            "google_compute_subnetwork.network_subnet",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230817",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/zones/europe-north1-a/disks/worker-2webfusion-kube-cluster-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "kube-cluster-vm3f0bb869.garystimber.site",
            "id": "projects/mypersonaluse-396811/zones/europe-north1-a/instances/worker-2webfusion-kube-cluster-test-vm",
            "instance_id": "7703386511244385464",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "KE5DxIAG1gk=",
            "metadata_startup_script": "sudo swapoff -a;\r\nsudo apt install docker.io -y;\r\ncurl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add;\r\necho \"deb https://apt.kubernetes.io/ kubernetes-xenial main\" | sudo tee /etc/apt/sources.list.d/kubernetes.list;\r\nsudo apt update;\r\nsudo apt install kubeadm kubelet kubectl kubernetes-cni -y;\r\n",
            "name": "worker-2webfusion-kube-cluster-test-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.228.105.124",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
                "network_ip": "10.10.10.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/regions/europe-north1/subnetworks/webfusion-kube-cluster-test-subnet",
                "subnetwork_project": "mypersonaluse-396811"
              }
            ],
            "project": "mypersonaluse-396811",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/zones/europe-north1-a/instances/worker-2webfusion-kube-cluster-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "europe-north1-a"
          },
          "dependencies": [
            "data.template_file.linux-metadata",
            "google_compute_address.static3",
            "google_compute_network.vpc",
            "google_compute_subnetwork.network_subnet",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
            "mtu": 0,
            "name": "webfusion-kube-cluster-test-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "mypersonaluse-396811",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-28T01:58:43.067-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/mypersonaluse-396811/regions/europe-north1/subnetworks/webfusion-kube-cluster-test-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "webfusion-kube-cluster-test-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/global/networks/webfusion-kube-cluster-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mypersonaluse-396811",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mypersonaluse-396811/regions/europe-north1/subnetworks/webfusion-kube-cluster-test-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}